<resources>

    <string name="app_name">Animati App Android</string>
    <string name="quienes_somos">Animati es una papelería dedicada a ofrecer una amplia gama de productos de alta calidad para satisfacer las necesidades de nuestros clientes. Desde nuestra fundación en 2021, nos hemos comprometido a proporcionar artículos de papelería y librería que inspiran la creatividad y la productividad en el día a día.
</string>
    <string name="nuestra_mision">Aspiramos a ser la papelería de referencia en nuestra comunidad, reconocida por la calidad de nuestros productos, la excelencia en el servicio al cliente y nuestro compromiso con la sostenibilidad. Nos esforzamos por ser el lugar al que acudan estudiantes, profesionales y creativos en busca de inspiración y herramientas de trabajo.</string>
    <string name="nuestra_vision">Aspiramos a ser la papelería de referencia en nuestra comunidad, reconocida por la calidad de nuestros productos, la excelencia en el servicio al cliente y nuestro compromiso con la sostenibilidad.
</string>
    <string name="nuestros_valores">Calidad: Cada producto en nuestra tienda cumple con los más altos estándares de calidad</string>

    <!-- Activity_Login -->
    <string name="login_button_text">Login</string>
    <string name="contrasena_text">Contraseña</string>
    <string name="usuario_text">Usuario</string>
    <string name="Opciones_inicio_sesion_text">O Iniciar Sesión con</string>
    <string name="logo_de_google">Logo de google</string>
    <string name="registro_click_text">Si aún no tiene una cuenta, puede registrarse aquí</string>
    <string name="descripcion_logo">Logo de la aplicacion en el cual se puede ver un monigote que es la mascota y el nombre de la app Animati Web</string>

    <!-- Forgot_Password -->
    <string name="login">Iniciar sesión</string>
    <string name="logout">Cerrar sesión</string>
    <string name="forgot_password_text">¿Olvidaste tu contraseña?</string>
    <string name="change_password_title">Cambiar Contraseña</string>
    <string name="recover_password">Recuperar Contraseña</string>
    <string name="forgot_password_title">Recuperar Contraseña</string>
    <string name="enter_email">Introduce tu correo electrónico</string>
    <string name="reset_password_button">Enviar enlace de recuperación</string>

    <!-- Activity_Register -->
    <string name="app_logo">Animati App Logo</string>
    <string name="register">Registrarse</string>
    <string name="username">Nombre de Usuario</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="newsletter">Deseo recibir correos electrónicos con novedades</string>
    <string name="terms_conditions">Acepto los términos y condiciones</string>
    <string name="send">Enviar</string>

    <!-- Activity_Gallery -->
    <string name="inicio">Inicio</string>
    <string name="galería">Galería</string>
    <string name="nosotros">Nosotros</string>
    <string name="mis_datos">Mis datos</string>
    <string name="contacto">Contacto</string>
    <string name="carrito_de_compras">Carrito de compras</string>
    <string name="carrito">carrito</string>
    <string name="menu">menu</string>
    <string name="logo">logo</string>
    <string name="rectangulo">rectangulo</string>
    <string name="descripcion">descripcion</string>
    <string name="descripcion_prod_1">Anotadores personalizados con dibujos a pedido, ideales para expresar tu estilo único.</string>
    <string name="descripcion_prod_2">Señaladores personalizados con diseños únicos. Perfectos para agregar un toque.</string>
    <string name="descripcion_prod_3">Cubicraft personalizados con tus personajes favoritos. Arma y decora con figuras.</string>
    <string name="precio_prod_1">$1.000,00</string>
    <string name="precio_prod_2">$  500,00</string>
    <string name="precio_prod_3">$1.500,00</string>

    <!-- Activity_Profile -->
    <string name="profile_image_desc">Imagen de perfil</string>
    <string name="bienvenido">Bienvenido, </string>
    <string name="change_email">Cambiar Email</string>
    <string name="change_password">Cambiar Contraseña</string>
    <string name="view_purchase_history">Ver historial de compras</string>
    <string name="view_order_tracking">Seguimiento de pedidos</string>
    <string name="logo_description">personaje, fantasioso de colores naranja, violeta, amarillo y celeste que tiene el nombre de la app debajo</string>
    <string name="a_n_no_tienes_una_cuenta">¿Aún no tienes una cuenta?</string>
    <string name="welcome_message">Bienvenido/a, %1$s %2$s</string>

    <!-- Activity_Recovery_Password -->
    <string name="go_home">Volver al inicio</string>
    <string name="enter_new_password">Indique su nueva contraseña</string>
    <string name="repeat_password">Repita la contraseña</string>
    <string name="send_recovery_email">Confirmar cambios</string>
<<<<<<< Updated upstream
    <string name="cantidadDefault">1</string>
    <string name="textoBotonDecrementoProducto">-</string>
    <string name="textoBotonIncrementoProducto">+</string>
    <string name="textoBotonConfirmarAgregarCarrito">Agregar</string>
    <string name="textoBotonEliminarItemCarrito">X</string>
    <string name="textoRevisarMail">Revise la cuenta de correo electrónico que ingresó anteriormente para obtener el código de seguridad.</string>
    <string name="textoRevisarMailSpam">Si no encuentra el correo de recuperación de contraseña, revise la carpeta de spam o correo no deseado</string>
    <string name="enter_code">XXXXXX</string>
=======

    <!-- Metodo de pago -->
    <string name="select_payment_method">Selecciona el método de pago</string>
    <string name="credit_card">Tarjeta de Crédito</string>
    <string name="debit_card">Tarjeta de Débito</string>
    <string name="titulo_datos">Ingrese sus datos</string>
    <string name="nombre_tarjeta">Nombre</string>
    <string name="nombre_completo_tarjeta">Nombre completo</string>
    <string name="apellido_tarjeta">Apellido</string>
    <string name="apellido_completo_tarjeta">Apellido completo</string>
    <string name="numero_tarjeta">Numero de tarjeta</string>
    <string name="numero_tarjeta_hint">XXXX XXXX XXXX XXXX</string>
    <string name="vencimiento">Fecha de vencimiento</string>
    <string name="vencimiento_hint">MM/AA</string>
    <string name="codigo_seguridad">Código de seguridad</string>
    <string name="codigo_seguridad_hint">XXX</string>
    <string name="confirmar">Confirmar</string>

    <!-- Activity_Cuotas -->
    <string name="cuotas">Cuotas</string>
    <string name="u_cuotas">1 Cuota</string>
    <string name="d_cuotas">2 Cuotas</string>
    <string name="t_cuotas">3 Cuotas</string>
    <string name="c_cuotas">4 Cuotas</string>
    <string name="C_cuotas">5 Cuotas</string>
    <string name="s_cuotas">6 Cuotas</string>
    <string name="S_cuotas">7 Cuotas</string>
    <string name="o_cuotas">8 Cuotas</string>
    <string name="n_cuotas">9 Cuotas</string>
    <string name="D_cuotas">10 Cuotas</string>
    <string name="O_cuotas">11 Cuotas</string>
    <string name="dD_cuotas">12 Cuotas</string>






>>>>>>> Stashed changes
</resources>
