<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_gravity="top"
    android:elevation="1dp">

    <!-- El rectángulo rosa -->
    <ImageView
        android:id="@+id/rectangulo_rosa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/rose"
        android:contentDescription="@string/rectangulo"
        android:elevation="1dp"
        tools:ignore="ImageContrastCheck" />

    <!-- Botón de menú -->
    <ImageButton
        android:id="@+id/menu"
        android:layout_width="62dp"
        android:layout_height="63dp"
        android:layout_gravity="start|center_vertical"
        android:background="@color/transp"
        android:contentDescription="@string/menu"
        android:elevation="4dp"
        android:onClick="op_menu"
        android:padding="8dp"
        android:scaleType="centerInside"
        android:scaleX="1.25"
        android:scaleY="1.25"
        android:src="@drawable/ico_menu"
        app:menu="@menu/main_menu"
        tools:ignore="ImageContrastCheck" />

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:adjustViewBounds="false"
        android:background="@color/transp"
        android:contentDescription="@string/logo"
        android:elevation="4dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ico_logo"
        tools:ignore="ImageContrastCheck" />

    <!-- Botón del carrito -->
    <ImageButton
        android:id="@+id/carrito"
        android:layout_width="62dp"
        android:layout_height="63dp"
        android:layout_gravity="end|center_vertical"
        android:background="@color/transp"
        android:contentDescription="@string/carrito"
        android:elevation="4dp"
        android:onClick="op_carrito"
        android:padding="8dp"
        android:scaleType="centerInside"
        android:scaleX="0.80"
        android:scaleY="0.80"
        android:src="@mipmap/ico_shop"
        tools:ignore="ImageContrastCheck" />

</FrameLayout>
