<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login"
    tools:context=".ProfileActivity">

    <!-- Imagen de perfil -->
    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/profile_image_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/default_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp" />

    <!-- Botón para cambiar la imagen de perfil -->
    <Button
        android:id="@+id/change_profile_image_button"
        android:layout_width="150dp"
        android:layout_height="72dp"
        android:text="@string/change_profile_image"
        android:background="@drawable/button_border"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <!-- Nombre y apellido del usuario con saludo -->
    <TextView
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp" />

    <!-- Botón para cambiar email -->
    <Button
        android:id="@+id/change_email_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/change_email"
        android:background="@drawable/rounded_button_background"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/change_profile_image_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp" />

    <!-- Botón para cambiar contraseña -->
    <Button
        android:id="@+id/change_password_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:background="@drawable/rounded_button_background"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/change_email_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp" />

    <!-- Botón para ver el historial de compras -->
    <Button
        android:id="@+id/view_purchase_history_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/view_purchase_history"
        android:background="@drawable/rounded_button_background"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/change_password_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp" />

    <!-- Botón para ver el seguimiento de pedidos -->
    <Button
        android:id="@+id/view_order_tracking_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/view_order_tracking"
        android:background="@drawable/rounded_button_background"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/view_purchase_history_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
